--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,6 +44,9 @@ p {
   @include respond(phone) {
     font-size: 2.5rem;
     max-width: 100%;
+    font-weight: 400;
+    letter-spacing: .4rem;
+    text-shadow: 1px 1px rgba($color-black, .2);
   }
 }
 
@@ -61,6 +64,8 @@ p {
 
   @include respond(phone) {
     font-size: 2.2rem;
+    font-weight: 400;
+    letter-spacing: .3rem;
   }
 }
 
