--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     background-color: $color-grey;
+    padding: 3%;
 
     &__links-container {
         margin: 0 auto;
