--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,14 +4,14 @@
   position: relative;
 
   @include respond(phone) {
-    height: 50vh;
+    height: 60vh;
   }
 
   &__text-container {
     width: 100%;
     position: absolute;
 
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
   }
